--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,16 @@
 ---
 import HeaderLink from "./HeaderLink.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
+import { Icon } from 'astro-icon/components'
+import "../style/toggle.css"
 ---
 
 <header>
+	<label class="switch">
+		<input type="checkbox" checked>
+		<span class="slider round"></span>
+	</label>
+
 	<div class="header-section">
 		<div class="header-frame">
 			<h1>{SITE_TITLE}</h1>
