--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,13 +2,16 @@
 import HeaderLink from "./HeaderLink.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 import { Icon } from 'astro-icon/components'
-import "../style/toggle.css"
 ---
 
 <header>
-	<label class="switch">
-		<input type="checkbox" checked>
+	<!-- <label class="switch">
+		<input type="checkbox" id="theme-toggle">
 		<span class="slider round"></span>
+	</label> -->
+
+	<label id="theme-switch" class="theme-switch" for="checkbox_theme">
+		<input type="checkbox" id="checkbox_theme">
 	</label>
 
 	<div class="header-section">
@@ -29,3 +32,65 @@ import "../style/toggle.css"
 		margin: 0.5em 0;
 	}
 </style>
+<script>
+//determines if the user has a set theme
+	function detectColorScheme(){
+		var theme="light";    //default to light
+
+		//local storage is used to override OS theme settings
+		if(localStorage.getItem("theme")){
+			if(localStorage.getItem("theme") == "dark"){
+				var theme = "dark";
+			}
+		} else if(!window.matchMedia) {
+			//matchMedia method not supported
+			return false;
+		} else if(window.matchMedia("(prefers-color-scheme: dark)").matches) {
+			//OS theme setting detected as dark
+			var theme = "dark";
+		}
+
+		//dark theme preferred, set document with a `data-theme` attribute
+		if (theme=="dark") {
+			document.documentElement.setAttribute("data-theme", "dark");
+		} else if (theme=="light") {
+			document.documentElement.setAttribute("data-theme", "light");
+		}
+	}
+	detectColorScheme();
+
+	// Function to set the theme
+	function setTheme(theme) {
+		document.documentElement.setAttribute('data-theme', theme);
+		toggleSwitch.checked = (theme === 'dark');
+		localStorage.setItem('theme', theme);
+	}
+	let mql = window.matchMedia("(prefers-color-scheme: dark)");
+	mql.addEventListener("change", () => {
+		setTheme(mql.matches ? 'dark' : 'light');
+	})
+
+	//identify the toggle switch HTML element
+	const toggleSwitch = document.querySelector('#theme-switch input[type="checkbox"]') as HTMLInputElement;
+
+	//function that changes the theme, and sets a localStorage variable to track the theme between page loads
+	function switchTheme(e) {
+		if (e.target.checked) {
+			localStorage.setItem('theme', 'dark');
+			document.documentElement.setAttribute('data-theme', 'dark');
+			toggleSwitch.checked = true;
+		} else {
+			localStorage.setItem('theme', 'light');
+			document.documentElement.setAttribute('data-theme', 'light');
+			toggleSwitch.checked = false;
+		}
+	}
+
+	//listener for changing themes
+	toggleSwitch.addEventListener('change', switchTheme, false);
+
+	//pre-check the dark-theme checkbox if dark-theme is set
+	if (document.documentElement.getAttribute("data-theme") == "dark"){
+		toggleSwitch.checked = true;
+	}
+</script>
